# clasp

./: .gitattributes  .gitignore  CHAT.md  CLASP-Protocol-v2.md  CLASP-Protocol.md  CLASP-QuickRef.md  CLAUDE.md  Cargo.toml  DEFRA.md  HANDOFF.md  PLAN.md  PUBLISHING.md  README.md  SignalFlow-Protocol-v2.md  SignalFlow-QuickRef.md  TASKS.md  clasp-minimal.js  mockup-explainer.html  signalflow-minimal.js
.github/workflows/: ci.yml  defra-integration.yml  deploy-relay.yml  release.yml
.internal/: CLASP-DEFRA-README.md  CURRENT-STATUS.md  DOCUMENTATION-PLAN.md  GAP-ANALYSIS.md  HANDOFF-2026-01-26-VIDEO.md  HANDOFF-2026-01-26.md  HANDOFF-2026-02-19.md  HANDOFF-2026-02-20-ADMIN-TOOLING.md  HANDOFF-2026-02-20-AUDIT-FIXES.md  HANDOFF-2026-02-20-DISTRIBUTED.md  HANDOFF-2026-02-21-APP-CONFIG.md  HANDOFF-2026-02-21-DOCS-FEATURES.md  HANDOFF-2026-02-21-PENTEST.md  HANDOFF-2026-02-22-CRYPTO-LIB.md  HANDOFF-2026-03-05-E2E-CRYPTO.md  HANDOFF-2026-03-06-RELAY-SDK.md  HANDOFF-2026-03-06-SDK.md  HANDOFF-DEFRA-INTEGRATION.md  PLANS-SUMMARY.md  RESEARCH-DEFRA-SOURCE-NETWORK.md  SOURCE-NETWORK-INTEGRATION-PLAN.md  TEST-REPORT.md  TESTING-PLAN.md
.internal/analysis/: 00-MASTER-INDEX.md  01-ARCHITECTURE.md  02-CRATE-DEPENDENCY-MAP.md  03-CLASP-CORE.md  04-CLASP-ROUTER.md  05-CLASP-TRANSPORT.md  06-CLASP-BRIDGE.md  07-CLASP-CLIENT.md  08-CLASP-DISCOVERY.md  09-AUXILIARY-CRATES.md  10-E2E-TEST-SUITE.md  11-LANGUAGE-BINDINGS.md  (+5 more)
.tracking/: DECISIONS.md  PROGRESS.md  RESEARCH.md
bindings/python/: README.md  pyproject.toml
bindings/python/python/clasp/: client.py  types.py
bindings/python/python/signalflow/: __init__.py  client.py  types.py
bindings/python/tests/: __init__.py  test_client.py  test_types.py
clasp-e2e/: Cargo.toml
crates/clasp-caps/: Cargo.toml  README.md
crates/clasp-caps/src/: error.rs  lib.rs  token.rs  validator.rs
crates/clasp-caps/tests/: pentest_cap.rs  pentest_pat.rs
crates/clasp-client/: Cargo.toml  README.md
crates/clasp-client/src/: client.rs  error.rs  lib.rs  p2p.rs
crates/clasp-client/tests/: client_tests.rs
crates/clasp-config-defra/: Cargo.toml  README.md
crates/clasp-config-defra/src/: convert.rs  error.rs  lib.rs  policy.rs  schema.rs  store.rs  types.rs
crates/clasp-crypto/: Cargo.toml  README.md
crates/clasp-crypto/src/: client.rs  error.rs  lib.rs  primitives.rs  protocol.rs  storage.rs  types.rs
crates/clasp-defra-bridge/: Cargo.toml  README.md
crates/clasp-defra-bridge/src/: address.rs  bridge.rs  convert.rs  error.rs  lib.rs  traits.rs  watcher.rs  writer.rs
crates/clasp-defra-transport/: Cargo.toml  README.md
crates/clasp-defra-transport/src/: address.rs  error.rs  lib.rs  protocol.rs  sync.rs  tunnel.rs
crates/clasp-federation/: Cargo.toml  README.md
crates/clasp-federation/src/: config.rs  error.rs  lib.rs  link.rs  manager.rs  namespace.rs
crates/clasp-identity/: Cargo.toml  README.md
crates/clasp-identity/src/: defra_identity.rs  did.rs  error.rs  identity.rs  lib.rs  peer_id.rs
crates/clasp-journal/: Cargo.toml  README.md
crates/clasp-journal-defra/: Cargo.toml  README.md
crates/clasp-journal-defra/src/: client.rs  convert.rs  error.rs  journal.rs  lib.rs  schema.rs
crates/clasp-journal/src/: entry.rs  error.rs  journal.rs  lib.rs  memory.rs  sqlite.rs
crates/clasp-journal/tests/: pentest_jnl.rs
crates/clasp-lens/: Cargo.toml
crates/clasp-lens/src/: error.rs  host.rs  lib.rs  transport.rs
crates/clasp-lens/tests/: host_tests.rs
crates/clasp-lens/tests/fixtures/: scale_lens.wasm
crates/clasp-lens/tests/test-lens-scale/: Cargo.toml  README.md
crates/clasp-lens/tests/test-lens-scale/src/: lib.rs
crates/clasp-registry/: Cargo.toml  README.md
crates/clasp-registry-defra/: Cargo.toml  README.md
crates/clasp-registry-defra/src/: convert.rs  error.rs  lib.rs  schema.rs  store.rs
crates/clasp-registry/src/: entity.rs  error.rs  lib.rs  sqlite.rs  store.rs  token.rs  validator.rs
crates/clasp-registry/tests/: pentest_ent.rs
crates/clasp-rules/: Cargo.toml  README.md
crates/clasp-rules/src/: engine.rs  error.rs  lib.rs  rule.rs
crates/clasp-rules/tests/: pentest_rul.rs
crates/clasp-state-defra/: Cargo.toml  README.md
crates/clasp-state-defra/benches/: cache_bench.rs
crates/clasp-state-defra/src/: convert.rs  error.rs  lib.rs  schema.rs  store.rs
crates/clasp-test-utils/: Cargo.toml  README.md
crates/clasp-test-utils/src/: lib.rs
crates/signalflow-client/: Cargo.toml
crates/signalflow-client/src/: client.rs  error.rs  lib.rs
crates/signalflow-discovery/: Cargo.toml
crates/signalflow-discovery/src/: broadcast.rs  device.rs  lib.rs  mdns.rs
crates/signalflow-wasm/: Cargo.toml
crates/signalflow-wasm/src/: lib.rs
deploy/: setup-secrets.sh
deploy/relay/: Cargo.toml  Dockerfile  README.md
deploy/relay/config/: chat.json
deploy/relay/digitalocean/: app.yaml
deploy/relay/src/: app_config.rs  auth.rs  config.rs  cpsk.rs  federation.rs  health.rs  journal_api.rs  lens.rs  lib.rs  main.rs  registry.rs  server.rs  validator.rs
deploy/relay/src/validator/: filter.rs  helpers.rs  mod.rs  paths.rs  tests.rs  write.rs
deploy/relay/tests/: app_config_test.rs  auth_test.rs  journal_api_test.rs  lens_test.rs  pentest_adm.rs  persist_test.rs
docs/: architecture.md  index.md  testing-handoff.md  testing.md
docs-archive/: architecture.md  index.md  testing.md
examples/: README.md  docker-compose.yml
lenses/: README.md
lenses/hysteresis/: Cargo.toml
lenses/hysteresis/src/: lib.rs
lenses/lowpass/: Cargo.toml
lenses/lowpass/src/: lib.rs
lenses/moving-average/: Cargo.toml
lenses/moving-average/src/: lib.rs
scripts/: release.sh
site/: index.html  package-lock.json  package.json
test-suite/: Cargo.toml
tests/: run_bridge_tests.sh
tools/clasp-router/: Cargo.toml
tools/clasp-router/src/: main.rs
tools/sf-bridge-service/: Cargo.toml
tools/sf-bridge-service/src/: main.rs
tools/sf-cli/: Cargo.toml
tools/sf-cli/src/: main.rs
tools/sf-router/: Cargo.toml
tools/sf-router/src/: main.rs
tools/sf-test/: Cargo.toml
tools/sf-test/src/: main.rs
(+910 files in other folders)
