[workspace]
resolver = "2"
members = [
    "crates/signalflow-core",
    "crates/signalflow-transport",
    "crates/signalflow-discovery",
    "crates/signalflow-bridge",
    "crates/signalflow-router",
    "crates/signalflow-client",
    "crates/signalflow-embedded",
    "crates/signalflow-wasm",
    "tools/sf-bridge-service",
    # Tools temporarily disabled - need API updates
    # "tools/sf-cli",
    # "tools/sf-router",
    # "tools/sf-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lumencanvas/signalflow"
rust-version = "1.75"
authors = ["LumenCanvas"]
description = "Universal protocol for creative tools communication"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# Networking
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
quinn = "0.10"
socket2 = "0.5"

# Protocols
rosc = "0.10"
midir = "0.9"
artnet_protocol = "0.2"

# Discovery
mdns-sd = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
bytes = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4"] }
glob-match = "0.2"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "BinaryType", "CloseEvent", "ErrorEvent"] }

# Testing
criterion = "0.5"

# Internal crates
signalflow-core = { path = "crates/signalflow-core" }
signalflow-transport = { path = "crates/signalflow-transport" }
signalflow-discovery = { path = "crates/signalflow-discovery" }
signalflow-bridge = { path = "crates/signalflow-bridge" }
signalflow-router = { path = "crates/signalflow-router" }
signalflow-client = { path = "crates/signalflow-client" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
