[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalflow"
version = "0.1.0"
description = "SignalFlow client for Python - Universal creative protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "websockets>=10.0",
    "msgpack>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia",
    "Topic :: System :: Networking",
]
keywords = ["signalflow", "osc", "midi", "dmx", "artnet", "creative", "protocol"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lumencanvas/signalflow"
Documentation = "https://signalflow.dev/docs/python"
Repository = "https://github.com/lumencanvas/signalflow"

[tool.hatch.build.targets.wheel]
packages = ["python/signalflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
