[package]
name = "clasp-caps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clasp-core = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
