[package]
name = "clasp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLASP client library"
readme = "README.md"

[features]
default = []
p2p = ["clasp-transport/webrtc", "uuid", "serde_json"]

[dependencies]
clasp-core = { workspace = true }
clasp-transport = { workspace = true }

# P2P (optional)
uuid = { version = "1.0", features = ["v4"], optional = true }
serde_json = { version = "1.0", optional = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
