[package]
name = "clasp-config-defra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DefraDB-backed CLASP configuration storage with P2P sync and version history"

[dependencies]
clasp-journal-defra = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
