[package]
name = "clasp-defra-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Bidirectional bridge between DefraDB documents and CLASP real-time signals"

[dependencies]
clasp-core = { workspace = true }
clasp-journal-defra = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
