[package]
name = "clasp-defra-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tunnel DefraDB P2P sync over CLASP transports (WebSocket, WebRTC, QUIC)"

[dependencies]
clasp-core = { workspace = true }
clasp-journal-defra = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
