[package]
name = "clasp-journal-defra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DefraDB backend for CLASP journal - P2P state sync via Merkle CRDTs"

[dependencies]
clasp-core = { workspace = true }
clasp-journal = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
