[package]
name = "clasp-journal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Event log and state persistence for CLASP routers"

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies]
clasp-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

# Optional SQLite backend
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
