[package]
name = "clasp-registry-defra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DefraDB backend for CLASP entity registry - P2P identity sync via Merkle CRDTs"

[dependencies]
clasp-registry = { workspace = true }
clasp-journal-defra = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
