[package]
name = "clasp-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clasp-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
