[package]
name = "clasp-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server-side rules engine for CLASP protocol"

[dependencies]
clasp-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
