[package]
name = "clasp-state-defra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DefraDB-backed state store for CLASP with write-through cache and P2P sync"

[dependencies]
clasp-core = { workspace = true }
clasp-journal-defra = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
glob-match = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
