[package]
name = "clasp-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities for CLASP protocol crates"

[features]
default = []
lens = ["dep:clasp-lens", "dep:serde_json"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Core CLASP crates
clasp-core = { workspace = true }
clasp-router = { workspace = true }
clasp-client = { workspace = true }

# Optional: LensVM test helpers
clasp-lens = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Utilities
parking_lot = { workspace = true }
