[package]
name = "signalflow-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SignalFlow client library"

[dependencies]
signalflow-core = { workspace = true }
signalflow-transport = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
