# Standalone CLASP Relay
#
# This uses published crates from crates.io for deployment.
# For development, set CLASP_DEV=1 to use local workspace paths.

# Exclude from parent workspace
[workspace]

[package]
name = "clasp-relay"
version = "3.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLASP multi-protocol relay server"

[lib]
name = "clasp_relay"
path = "src/lib.rs"

[[bin]]
name = "clasp-relay"
path = "src/main.rs"

[features]
default = ["websocket", "rendezvous"]
# WebSocket (default, works everywhere)
websocket = ["clasp-router/websocket"]
# QUIC (high-performance, requires UDP and TLS certificates)
quic = ["clasp-router/quic", "rustls-pemfile"]
# Full protocol support
full = ["websocket", "quic", "mqtt-server", "osc-server", "rendezvous"]
# MQTT server adapter (accept MQTT clients)
mqtt-server = ["clasp-router/mqtt-server"]
# OSC server adapter (accept OSC clients)
osc-server = ["clasp-router/osc-server"]
# Rendezvous server for WAN discovery (enabled by default)
rendezvous = ["clasp-discovery"]

[dependencies]
# Published crates from crates.io
clasp-core = "3.3"
clasp-router = "3.3"
clasp-discovery = { version = "3.3", features = ["rendezvous"], optional = true }

# Runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# TLS certificate parsing (for QUIC)
rustls-pemfile = { version = "2.0", optional = true }

# Auth system
axum = "0.8"
argon2 = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Use local crate paths for development (WriteValidator/SnapshotFilter traits)
[patch.crates-io]
clasp-core = { path = "../../crates/clasp-core" }
clasp-router = { path = "../../crates/clasp-router" }
