# Standalone CLASP Relay
#
# This uses published crates from crates.io for deployment.
# For development, set CLASP_DEV=1 to use local workspace paths.

# Exclude from parent workspace
[workspace]

[package]
name = "clasp-relay"
version = "3.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLASP multi-protocol relay server"

[lib]
name = "clasp_relay"
path = "src/lib.rs"

[[bin]]
name = "clasp-relay"
path = "src/main.rs"

[features]
default = ["websocket", "rendezvous"]
# WebSocket (default, works everywhere)
websocket = ["clasp-router/websocket"]
# QUIC (high-performance, requires UDP and TLS certificates)
quic = ["clasp-router/quic", "rustls-pemfile"]
# Full protocol support
full = ["websocket", "quic", "mqtt-server", "osc-server", "rendezvous", "journal", "caps", "registry", "rules", "federation", "metrics"]
# MQTT server adapter (accept MQTT clients)
mqtt-server = ["clasp-router/mqtt-server"]
# OSC server adapter (accept OSC clients)
osc-server = ["clasp-router/osc-server"]
# Rendezvous server for WAN discovery (enabled by default)
rendezvous = ["clasp-discovery"]
# Journal for state persistence and replay
journal = ["clasp-router/journal", "clasp-journal"]
# Capability tokens (delegatable Ed25519 tokens)
caps = ["clasp-caps", "dep:ed25519-dalek"]
# Entity registry (persistent device/user identity)
registry = ["clasp-registry", "dep:ed25519-dalek"]
# Rules engine (server-side automation)
rules = ["clasp-router/rules", "clasp-rules"]
# Federation (multi-site state sync)
federation = ["clasp-federation", "clasp-transport", "clasp-router/federation", "dep:dashmap"]
# Prometheus metrics exporter
metrics = ["clasp-router/metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# Published crates from crates.io
clasp-core = "3.5"
clasp-router = "3.5"
clasp-discovery = { version = "3.5", features = ["rendezvous"], optional = true }
clasp-journal = { version = "3.5", features = ["sqlite"], optional = true }
clasp-caps = { version = "3.5", optional = true }
clasp-registry = { version = "3.5", features = ["sqlite"], optional = true }
clasp-rules = { version = "3.5", optional = true }
clasp-federation = { version = "3.5", optional = true }
clasp-transport = { version = "3.5", features = ["websocket"], optional = true }

# Runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"

# TLS certificate parsing (for QUIC)
rustls-pemfile = { version = "2.0", optional = true }

# Shared state (DashMap used by federation)
dashmap = { version = "5.5", optional = true }

# Auth system
axum = "0.8"
argon2 = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

# Crypto (for capability token trust anchors and entity token minting)
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }

# Prometheus metrics exporter (optional)
metrics-exporter-prometheus = { version = "0.16", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

# Use local crate paths for development (WriteValidator/SnapshotFilter traits)
[patch.crates-io]
clasp-core = { path = "../../crates/clasp-core" }
clasp-router = { path = "../../crates/clasp-router" }
clasp-discovery = { path = "../../crates/clasp-discovery" }
clasp-journal = { path = "../../crates/clasp-journal" }
clasp-caps = { path = "../../crates/clasp-caps" }
clasp-registry = { path = "../../crates/clasp-registry" }
clasp-rules = { path = "../../crates/clasp-rules" }
clasp-federation = { path = "../../crates/clasp-federation" }
clasp-transport = { path = "../../crates/clasp-transport" }
