[package]
name = "lens-hysteresis"
version = "0.1.0"
edition = "2021"
description = "Schmitt trigger / hysteresis lens for CLASP signal debouncing"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
