[package]
name = "lens-moving-average"
version = "0.1.0"
edition = "2021"
description = "Moving average lens for CLASP signal smoothing"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
