[package]
name = "sf-bridge-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SignalFlow Bridge Service for Electron IPC"

[[bin]]
name = "sf-bridge-service"
path = "src/main.rs"

[dependencies]
signalflow-core = { workspace = true }
signalflow-bridge = { workspace = true }

# Async
tokio = { workspace = true, features = ["full", "io-std"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }
