[package]
name = "sf-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SignalFlow CLI tool for debugging and testing"

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
signalflow-core.workspace = true
signalflow-client.workspace = true
signalflow-discovery.workspace = true

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
anyhow.workspace = true
