[package]
name = "sf-router"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SignalFlow router server"

[[bin]]
name = "sf-router"
path = "src/main.rs"

[dependencies]
signalflow-core.workspace = true
signalflow-router.workspace = true
signalflow-discovery.workspace = true
signalflow-bridge = { workspace = true, optional = true }

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"

[features]
default = ["bridges"]
bridges = ["signalflow-bridge"]
