[package]
name = "sf-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SignalFlow test utilities and integration tests"

[[bin]]
name = "sf-test"
path = "src/main.rs"

[dependencies]
signalflow-core.workspace = true
signalflow-client.workspace = true
signalflow-router.workspace = true

tokio.workspace = true
futures.workspace = true
clap = { version = "4.4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand = "0.8"
